--- a/cloud-gateway/src/main/resources/application-test.yml
+++ b/cloud-gateway/src/main/resources/application-test.yml
@@ -16,8 +16,14 @@ spring:
           filters:
             - StripPrefix=1
   sleuth:
-    sampler:
-      probability: 1.0
+      web:
+        client:
+          enabled: true
+      sampler:
+        probability: 1.0
+  zipkin:
+      base-url: http://192.168.99.101:9411
+      discoveryClientEnabled: false
 eureka:
   client:
     service-url:
