--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -56,7 +56,7 @@
     </dependencyManagement>
 
     <build>
-        <finalName>server</finalName>
+        <finalName>eureka</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
