--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     </properties>
 
+    <modules>
+        <module>cloud-common</module>
+        <module>cloud-client</module>
+        <module>cloud-server</module>
+        <module>cloud-gateway</module>
+    </modules>
+    <packaging>pom</packaging>
+
     <dependencies>
         <!--spring boot核心引用-->
         <dependency>
@@ -42,12 +50,6 @@
             </exclusions>
         </dependency>
 
-        <!--消息追踪使用-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
-        </dependency>
-
         <!--spring cloud hystrix熔断器-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -58,6 +60,18 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <!--消息追踪使用-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
+        <!--日志收集所使用-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
 
     </dependencies>
