--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>cloud-client</module>
         <module>cloud-server</module>
         <module>cloud-gateway</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -48,12 +49,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <!--spring cloud hystrix熔断器-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
         <!--spring cloud 服务注册中心-->
