--- a/config-server/src/main/resources/application-test.yml
+++ b/config-server/src/main/resources/application-test.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8004
+  port: 8888
 
 eureka:
   client:
@@ -14,7 +14,11 @@ spring:
           uri: https://github.com/xucongyan/config.git
           username: xucongyan
           password: xuzengkui1992
-
+  rabbitmq:
+    host: 192.168.99.101
+    port: 5672
+    username: admin
+    password: admin
 
   sleuth:
     web:
@@ -25,4 +29,10 @@ spring:
   zipkin:
     base-url: http://192.168.99.101:9411
     discoveryClientEnabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
