--- a/cloud-client/pom.xml
+++ b/cloud-client/pom.xml
@@ -64,9 +64,16 @@
             <version>1.1.10</version>
         </dependency>
 
+        <!--redis的依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!-- cache缓存的依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
         <dependency>
