--- a/cloud-gateway/src/main/resources/application-test.yml
+++ b/cloud-gateway/src/main/resources/application-test.yml
@@ -9,8 +9,8 @@ spring:
           lower-case-service-id: true
           enabled: true
       routes:
-        - id: xcy-cloud-service
-          uri: lb://xcy-cloud-service
+        - id: xcy-cloud-server
+          uri: lb://xcy-cloud-server
           predicates:
             - Path=/user/**
           filters:
@@ -22,10 +22,10 @@ spring:
       sampler:
         probability: 1.0
   zipkin:
-      base-url: http://192.168.99.101:9411
+      base-url: http://192.168.99.100:9411
       discoveryClientEnabled: false
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.99.101:8000/eureka/
+      defaultZone: http://192.168.99.100:8000/eureka/
 
