公共组件尝试放到阿里云上

--- a/eureka-server/src/main/dockerfile/Dockerfile
+++ b/eureka-server/src/main/dockerfile/Dockerfile
@@ -1,10 +1,10 @@
-from hub.c.163.com/library/java:latest
+from java
 
 MAINTAINER xucongyan 838587329@qq.com
 
 VOLUME /tmp
 
-ADD server.jar app.jar
+ADD eureka.jar app.jar
 
 RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
