--- a/cloud-client/src/main/resources/bootstrap-test.yml
+++ b/cloud-client/src/main/resources/bootstrap-test.yml
@@ -1,14 +1,14 @@
 spring:
   #数据库基本配置
   datasource:
-    username: root
-    password: 123456
-    url: jdbc:mysql://192.168.99.100:3306/ag_admin_v1?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    username: learn
+    password: Xcy130927
+    url: jdbc:mysql://xcy-aliyun.mysql.rds.aliyuncs.com:3306/ag_admin_v1?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
   #redis基本配置
   redis:
-    host: 192.168.99.100
+    host: 39.107.241.217
     password:
     port: 6379
     timeout: 60000
@@ -29,11 +29,11 @@ spring:
     sampler:
       probability: 1.0
   zipkin:
-    base-url: http://192.168.99.100:9411
+    base-url: http://39.107.241.217:9411
     discoveryClientEnabled: false
   #rabbitMQ相关配置信息
   rabbitmq:
-    host: 192.168.99.100
+    host: 39.107.241.217
     port: 5672
     username: admin
     password: admin
@@ -63,7 +63,7 @@ mybatis:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.99.100:8000/eureka/
+      defaultZone: http://39.107.241.217:8000/eureka/
 
 #开启访问，为了配合spring bus
 management:
