Revert "修改注册中心为nacos"
This reverts commit a8b95951affdcd1771373bd3df0464a66a04a0d3.

--- a/cloud-gateway/src/main/resources/application-test.yml
+++ b/cloud-gateway/src/main/resources/application-test.yml
@@ -3,9 +3,6 @@ server:
 
 spring:
   cloud:
-    nacos:
-      discovery:
-        server-addr: 39.107.241.217:8848
     gateway:
       discovery:
         locator:
@@ -27,5 +24,8 @@ spring:
   zipkin:
       base-url: http://39.107.241.217:9411
       discoveryClientEnabled: false
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://39.107.241.217:8000/eureka/
 
