--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,10 @@
             </exclusions>
         </dependency>
 
-        <!--使用nacos作为服务注册中心-->
+        <!--spring cloud 服务注册中心-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-            <version>0.9.0.RELEASE</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
         <!--消息追踪使用-->
