添加Jackson的工具类支持

--- a/cloud-client/pom.xml
+++ b/cloud-client/pom.xml
@@ -58,6 +58,7 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--druid数据库连接池-->
         <dependency>
             <groupId>com.github.drtrang</groupId>
             <artifactId>druid-spring-boot2-starter</artifactId>
@@ -70,10 +71,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- springboot-json -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.68</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
 
         <dependency>
